--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- ./index.html -->
 <head>
   <meta property="og:title" content="소프트웨어 파괴의 미학">
-  <meta property="og:image" content="/thumbnail.png">
+  <meta property="og:image" content="/pt-destroying-software/thumbnail.png">
 </head>
